--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,9 +11,9 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Blueprints/GI_Main.GI_Main_C
-GameDefaultMap=/Game/Levels/FirstPersonExampleMap.FirstPersonExampleMap
+GameDefaultMap=/Game/Levels/Main_Menu.Main_Menu
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
